ADD_EXECUTABLE(TraceHBonds TraceHBonds.cpp ListOfHBonds.cpp ReadData.cpp
               ReadCarMdf.cpp Print.cpp main.cpp)

# Link the executable to a library.
FIND_PACKAGE( Boost REQUIRED COMPONENTS iostreams REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(TraceHBonds ${Boost_LIBRARIES} )

FIND_PACKAGE( BZip2 )
IF( BZIP2_FOUND )
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_BZIP2")
	INCLUDE_DIRECTORIES( ${BZIP2_INCLUDE_DIR} )
	TARGET_LINK_LIBRARIES(TraceHBonds ${BZIP2_LIBRARIES} )
endif()

FIND_PACKAGE( ZLIB )
IF( ZLIB_FOUND )
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_ZLIB")
	INCLUDE_DIRECTORIES( ${ZLIB_INCLUDE_DIRS} )
	TARGET_LINK_LIBRARIES(TraceHBonds ${ZLIB_LIBRARIES} )
endif()
